# OS

./: CMakeLists.txt  Killer.cpp  Number.cpp  Number.h  User.cpp  Vector.cpp  Vector.h  WinOs1.sln  chan.h  main.cpp  readme.txt
Debug/: Number.lib  Vector.exp  Vector.ilk  Vector.lib  WinOs1.exp  WinOs1.ilk  WinOs1.lib
Number/: Number.cpp  Number.h  Number.vcxproj  Number.vcxproj.filters
Number/Debug/: Number.idb  Number.pch
Number/Debug/Number.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Proc/Debug/: Killer.ilk  User.ilk
Proc/Debug/Proc.tlog/: CL.command.1.tlog
Proc/Killer/: Killer.cpp  Killer.vcxproj
Proc/Killer/Debug/: Killer.exe.recipe  vc142.idb
Proc/Killer/Debug/Killer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Killer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Proc/Proc/Debug/Proc.tlog/: CL.read.1.tlog  CL.write.1.tlog
Vector/: Vector.cpp  Vector.h  Vector.vcxproj
Vector/Debug/: Vector.dll.recipe  vc142.idb
Vector/Debug/Vector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vector.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
WinOs1/: WinOs1.cpp  WinOs1.vcxproj  WinOs1.vcxproj.filters
WinOs1/Debug/: WinOs1.exe.recipe  vc142.idb
WinOs1/Debug/WinOs1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WinOs1.lastbuildstate  WinOs1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
