cmake_minimum_required(VERSION 3.17)
project(lab1)

set(CMAKE_CXX_STANDARD 17)
set(GCC_COVERAGE_COMPILE_FLAGS "-fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
add_library(number STATIC Number.cpp)
add_library(vector SHARED Vector.cpp)
target_link_libraries(vector number)
add_executable(lab1 main.cpp)
target_link_libraries(lab1 number)
target_link_libraries(lab1 vector)
